# pipeline

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
src/: cli.rs  client.rs  custom_serde.rs  default_client.toml  default_server.toml  framed_io.rs  handshake.rs  hashing.rs  lib.rs  main.rs  query_db.rs  server.rs  server_route.rs
src/client/: default.toml  ssh_tunnel.rs  tunnel.toml  watch.rs
src/server/: clean.rs  create_buckets.rs  database.rs  default.toml  list.rs  mark.rs  processing.rs  prune.rs  query.rs  query.toml
src/server/query/: list.rs  mark.rs
