[package]
name = "pipeline"
version = "0.6.4"
license = "MIT"
edition = "2024"
rust-version = "1.88"

[dependencies]
bstr = "1.12.1"
clap = { version = "4.5.56", features = ["derive"] }
env_logger = "0.11.8"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
log = "0.4.29"
rpassword = "7.4.0"
russh = { version = "0.57.0", default-features = false, features = ["ring"] }
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.18", features = ["full"] }
toml = "0.9.11"
zeroize = "1.8.2"

[profile.release]
lto = true
codegen-units = 1
