[package]
name = "pipeline"
version = "0.9.0"
license = "MIT"
edition = "2024"
rust-version = "1.95"

[dependencies]
bstr = "1.12.1"
clap = { version = "4.6.1", features = ["derive"] }
digest-io = "0.1.0"
env_logger = "0.11.10"
futures-util = { version = "0.3.32", features = ["sink"] }
hex = "0.4.3"
log = "0.4.32"
rpassword = "7.5.4"
russh = { version = "0.61.2", default-features = false, features = ["ring", "serde"] }
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
tabled = "0.21.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.18", features = ["full"] }
toml = "1.1.2"
walkdir = "2.5.0"
zeroize = "1.9.0"

[profile.release]
lto = true
codegen-units = 1
